[package]
name = "rnafamprob"
version = "0.1.0"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "RNAfamProb Program, Program for Estimations of Posterior Probabilities on RNA Structural Alignment"
repository = "https://github.com/heartsh/rnafamprob"
readme = "README.md"
keywords = ["bioinformatics", "rna", "structural-alignment"]
license = "MIT"

[dependencies]
rna-algos = "0.1"
lazy_static = "0.1"
time = "0.1"
scoped_threadpool = "0.1"
getopts = "0.2"
bio = "0.20"
num_cpus = "1.0"
itertools = "0.7"

[lib]
path = "src/lib.rs"
name = "rnafamprob"
