[package]
name = "consprob"
version = "0.1.19"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "Quick Probability Inference Engine on RNA Structural Alignment"
repository = "https://github.com/heartsh/consprob"
readme = "README.md"
keywords = ["bioinformatics", "rna", "structural-alignment"]
license = "MIT"

[dependencies]
rna-algos = "0.1"
time = "0.1"
scoped_threadpool = "0.1"
getopts = "0.2"
bio = "0.20"
num_cpus = "1.0"
itertools = "0.10"
hashbrown = "0.12"
ndarray = "0.14"

[dev-dependencies]
criterion = "0.3"

[lib]
path = "src/lib.rs"
name = "consprob"

[[bench]]
name = "benches"
harness = false
